chore: update gitignore and remove .env from tracking - Added comprehensive .env file patterns to .gitignore - Removed sensitive Supabase keys from version control - Added patterns for secrets and config files

--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,18 @@ yarn-error.*
 .DS_Store
 *.pem
 
-# local env files
+# Environment files - NEVER commit these!
+.env
+.env.*
+.env.local
+.env.development
+.env.production
 .env*.local
+
+# Secrets and API keys
+*.secret
+secrets.json
+config.local.json
 
 # typescript
 *.tsbuildinfo
