--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@supabase/supabase-js": "^2.86.0",
+    "base64-arraybuffer": "^1.0.2",
     "date-fns": "^4.1.0",
     "expo": "~54.0.27",
     "expo-application": "^7.0.8",
@@ -20,6 +21,8 @@
     "expo-constants": "~18.0.11",
     "expo-crypto": "^15.0.8",
     "expo-file-system": "~19.0.20",
+    "expo-image-picker": "~17.0.9",
+    "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.10",
     "expo-router": "~6.0.17",
     "expo-sharing": "~14.0.8",
