feat: add forgot password and web compatibility fixes - Add forgot password handler using Supabase resetPasswordForEmail - Create ResponsiveContainer for web responsive layout - Add metro.config.js for icon font support on web - Update app.json with web bundler configuration - Add global.css for web-specific styling - Wrap all tab screens with ResponsiveContainer - Add useFonts hook for Ionicons on web

--- a/app.json
+++ b/app.json
@@ -31,7 +31,14 @@
       "predictiveBackGestureEnabled": false
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "bundler": "metro",
+      "output": "single",
+      "name": "SmartTrade",
+      "shortName": "SmartTrade",
+      "description": "Smart Inventory Management for Small Businesses",
+      "themeColor": "#10B981",
+      "backgroundColor": "#F9FAFB"
     },
     "plugins": [
       "expo-router",
